# ArgosThesis

./: .gitignore  Output.txt  README.md
controllers/footbot_marching/: CMakeLists.txt  footbot_marching.cpp  footbot_marching.h
datasets/DMMAnalysis/: 10_100_0_11_NN  10_100_100_00_NN  10_100_100_00_NNTime  10_100_100_00_deg  10_100_100_00_degTime  10_100_100_00_meta  10_100_100_01_NN  10_100_100_01_NNTime  10_100_100_01_deg  10_100_100_01_degTime  10_100_100_01_meta  10_100_100_01_range  10_100_100_01_rangeTime  10_100_100_10_NN  10_100_100_10_NNTime  10_100_100_10_deg  10_100_100_10_degTime  10_100_100_10_meta  10_100_100_10_range  10_100_100_10_rangeTime  10_100_100_11_NN  10_100_100_11_deg  10_100_100_11_meta  10_100_1_11_NN  10_100_1_11_meta  10_200_100_00_NN  10_200_100_00_NNTime  10_200_100_00_deg  10_200_100_00_degTime  10_200_100_00_meta  10_200_100_01_NN  10_200_100_01_NNTime  10_200_100_01_deg  10_200_100_01_degTime  10_200_100_01_meta  10_200_100_01_range  10_200_100_01_rangeTime  10_200_100_10_NN  10_200_100_10_NNTime  10_200_100_10_deg  (+2035 more)
datasets/GeneralPowerlaw/: 100.prep  200.prep  400.prep  750.prep
datasets/Longrun/: meta.lr  (+1 more)
experiments/: marching_large.argos  marching_large_s.argos
loop_functions/marching_loop_functions/: CMakeLists.txt  marching_loop_functions.cpp  marching_loop_functions.h  marching_qt_user_functions.cpp  marching_qt_user_functions.h
scripts/: argos.py  argos_dmm.py  heuristicvisualizer.py  plevaluator.py  plevaluator_dmm.py  plot_longrun.py  plot_powerlaw.py  prepperforplvisualizer.py  swarmsize.py
space_diff/: space.cpp
(+1720 files in other folders)
